# BlinkRustSTM32

./: Cargo.toml  memory.x
.cargo/: config.toml
cmd_builds/: commands.txt
src/: main.rs  thunk.txt
